--- a/public/src/css/miri-ui-kit-free.css
+++ b/public/src/css/miri-ui-kit-free.css
@@ -8526,7 +8526,8 @@ footer {
 
 .login-page {
   /* background-color: #00031d; */
-  background-color: #49ad00;
+  /* background-color: #49ad00; */
+  background: linear-gradient(#9aee5c,#c3efa3 ) !important;
   /* background-image: url("../images/bg-ijo.jpeg"); */
   background-size: cover;
   background-repeat: no-repeat;
